[gd_scene load_steps=3 format=3 uid="uid://btmcsl3sr15q4"]

[ext_resource type="Script" path="res://scripts/pet_entity.gd" id="1_2x6lx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_06b41"]

[node name="PetEntity" type="Area2D"]
script = ExtResource("1_2x6lx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_06b41")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
